--- a/src/main/resources/templates/add_company.html
+++ b/src/main/resources/templates/add_company.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:sec="http://www.w3.org/1999/xhtml">
 <head>
     <title>
-        Company Employee CRM Log in Form
+        Add Company
     </title>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -10,70 +10,70 @@
     <link rel="stylesheet" type="text/css"
           href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900|Roboto+Slab:400,700"/>
     <link rel="stylesheet" href="/css/cards.css">
+    <link rel="stylesheet" href="/css/forms.css">
+    <link rel="stylesheet" href="/css/button.css">
     <script src="https://kit.fontawesome.com/42d5adcbca.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Round" rel="stylesheet">
 </head>
 <body>
 <div th:replace="fragments/header :: header"></div>
-<div class="page-header align-items-start min-vh-100">
-    <span class="mask bg-gradient-dark opacity-6"></span>
-    <div class="container my-auto">
-        <div class="row">
-            <div class="col-lg-4 col-md-8 col-12 mx-auto">
-                <div class="card z-index-0 fadeIn3 fadeInBottom">
-                    <div class="card-header p-0 position-relative mt-n4 mx-3 z-index-2">
-                        <div class="bg-gradient-primary shadow-primary border-radius-lg py-3 pe-1">
-                            <h4 class="text-white font-weight-bolder text-center mt-2 mb-0">Add Company</h4>
-                        </div>
-                    </div>
-                    <div class="card__body">
-                        <form th:action="@{post}" th:object="${company}" method="post" enctype="multipart/form-data">
-                            <fieldset>
-                                <div class="font-weight-normal mb-3">
-                                    <span class="text-danger">*</span> Required fields
-                                </div>
-                                <div class="row">
-                                    <div class="col-md-6">
-                                        <div class="input-group input-group-static mb-3">
-                                            <div class="form-group">
-                                                <label>name <span class="text-danger">*</span></label>
-                                                <input type="text" th:field="*{company.name}"
-                                                       class="form-control input-lg"
-                                                       title="name" required/>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="col-md-6">
-                                        <div class="input-group input-group-static mb-3">
-                                            <label>Email: <span class="text-danger">*</span></label>
-                                            <input type="email" th:field="*{company.email}"
-                                                   class="form-control input-lg"
-                                                   title="email" required/>
-                                        </div>
-                                    </div>
-                                    <div class="row">
-                                        <div class="col-md-12">
-                                            <div class="input-group input-group-static mb-3">
-                                                <label>Website <span class="text-danger">*</span></label>
-                                                <input type="text" th:field="*{company.website}"
-                                                       class="form-control input-lg"
-                                                       title="website"
-                                                       required/>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="text-center">
-                                        <button type="submit" class="btn bg-gradient-primary w-100 my-4 mb-2">Save
-                                        </button>
-                                    </div>
-                                </div>
-                            </fieldset>
-                        </form>
-                    </div>
-                </div>
+<form style="position: relative; left: 35%; top: 25%" th:object="${company}" th:action="@{post}" method="POST" class="text-start"
+      enctype="multipart/form-data" role="form">
+    <div class="row">
+        <div class="my_container">
+            <div class="title">Create Company</div>
+            <div class="input-container ic1">
+                <input id="name" th:field="${company.name}" class="input" type="text"
+                       placeholder=" "/>
+                <div class="cut"></div>
+                <label for="name" class="placeholder">Name</label>
+            </div>
+            <div class="input-container ic2">
+                <input id="email" th:field="${company.email}" class="input" type="text"
+                       placeholder=" "/>
+                <div class="cut"></div>
+                <label for="email" class="placeholder">Email</label>
+            </div>
+            <div class="input-container ic2">
+                <input id="website" th:field="${company.website}" class="input"
+                       type="text" placeholder=" "/>
+                <div class="cut"></div>
+                <label for="website" class="placeholder">Website</label>
+            </div>
+            <div class="text-center" style="position: relative; bottom: -3%">
+                <button type="submit" class="button-success">Create</button>
+                <button type="reset" class="button-delete">Reset</button>
             </div>
         </div>
     </div>
-</div>
+</form>
 </body>
 </html>
+
+<!--<form th:object="${company}" th:action="@{'/companies/'+${companyId}+'/update'}" method="POST" class="text-start"-->
+<!--      enctype="multipart/form-data" role="form">-->
+<!--    <div class="row" style="position: relative; left: 35%; top: 15%">-->
+<!--        <div class="my_container">-->
+<!--            <div class="title">Edit</div>-->
+<!--            <div class="input-container ic1">-->
+<!--                <input id="name" th:value="${company.getName()}" th:field="${company.name}" class="input" type="text" placeholder=" "/>-->
+<!--                <div class="cut"></div>-->
+<!--                <label for="name" class="placeholder">Name</label>-->
+<!--            </div>-->
+<!--            <div class="input-container ic2">-->
+<!--                <input id="email" th:value="${company.getEmail()}" th:field="${company.email}" class="input" type="text" placeholder=" "/>-->
+<!--                <div class="cut"></div>-->
+<!--                <label for="email" class="placeholder">Email</label>-->
+<!--            </div>-->
+<!--            <div class="input-container ic2">-->
+<!--                <input id="website" th:value="${company.getWebsite()}" th:field="${company.website}" class="input" type="text" placeholder=" "/>-->
+<!--                <div class="cut"></div>-->
+<!--                <label for="website" class="placeholder">Website</label>-->
+<!--            </div>-->
+<!--            <div class="text-center">-->
+<!--                <button type="submit" class="button-success">Edit</button>-->
+<!--                <button type="reset" class="button-delete">Reset</button>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--</form>-->
