--- a/src/main/resources/templates/add_employee.html
+++ b/src/main/resources/templates/add_employee.html
@@ -3,91 +3,121 @@
 <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="/css/login.css"/>
     <title>
-        Edit employee
+        Add Employee
     </title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <link rel="stylesheet" type="text/css"
           href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900|Roboto+Slab:400,700"/>
     <link rel="stylesheet" href="/css/cards.css">
+    <link rel="stylesheet" href="/css/button.css">
+    <link rel="stylesheet" href="/css/forms.css">
     <script src="https://kit.fontawesome.com/42d5adcbca.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Round" rel="stylesheet">
 </head>
 <body>
 <div th:replace="fragments/header :: header"></div>
-<!--<div class="page-header align-items-start min-vh-100">-->
-<!--    <span class="mask bg-gradient-dark opacity-6"></span>-->
-<div class="container" style="position: relative; top: 5% ; left: 20%">
-    <div class="row">
-        <div class="col-lg-4 col-md-8 col-12 mx-auto">
-            <div class="card z-index-0 fadeIn3 fadeInBottom">
-                <div class="card-header p-0 position-relative mt-n4 mx-3 z-index-2" style="background-color: #1f5489">
-                    <div class="bg-gradient shadow-primary border-radius-lg py-3 pe-1">
-                        <h4 class="text-white font-weight-bolder text-center mt-2 mb-0">Add Employee</h4>
-                    </div>
-                </div>
-                <div class="card__body">
-                    <form th:action="@{'/companies/'+${companyId}+'/employee/post'}" th:object="${employee}"
-                          method="post"
-                          enctype="multipart/form-data">
-                        <fieldset>
-                            <div class="font-weight-normal mb-3">
-                                <span class="text-danger">*</span> Required fields
-                            </div>
-                            <div class="row">
-                                <div class="col-md-6">
-                                    <div class="input-group input-group-static mb-3">
-                                        <div class="form-group">
-                                            <label>Name <span class="text-danger">*</span></label>
-                                            <input type="text" th:field="${employee.name}"
-                                                   class="form-control input-lg"
-                                                   title="Name" required/>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-md-6">
-                                    <div class="input-group input-group-static mb-3">
-                                        <label>Surname <span class="text-danger">*</span></label>
-                                        <input type="text" th:field="${employee.surname}"
-                                               class="form-control input-lg"
-                                               title="Surname" required/>
-                                    </div>
-                                </div>
-                                <div class="row">
-                                    <div class="col-md-12">
-                                        <div class="input-group input-group-static mb-3">
-                                            <label>Email <span class="text-danger">*</span></label>
-                                            <input type="email" th:field="${employee.email}"
-                                                   class="form-control input-lg"
-                                                   title="Email"/>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="row">
-                                    <div class="col-md-12">
-                                        <div class="input-group input-group-static mb-3">
-                                            <label>Phone Number <span class="text-danger">*</span></label>
-                                            <input type="text" th:field="${employee.phone_number}"
-                                                   class="form-control input-lg"
-                                                   title="Phone Number"/>
-                                        </div>
-                                    </div>
-                                </div>
+<form style="height: 650px; position: relative; left: 35%; top: 25%;" th:object="${employee}"
+      th:action="@{'/companies/'+${companyId}+'/employees/post'}"
+      method="POST" class="text-start"
+      enctype="multipart/form-data" role="form">
 
-                                <div class="text-center">
-                                    <button type="submit" class="btn bg-gradient-success w-100 my-4 mb-2">Save
-                                    </button>
-                                    <button type="reset" class="btn bg-gradient-info w-100 my-4 mb-2">Reset</button>
-                                </div>
-                            </div>
-                        </fieldset>
-                    </form>
-                </div>
+    <div class="row">
+        <div class="my_container" style="height: 600px">
+            <div class="title">Create Employee</div>
+
+            <div class="input-container ic1">
+                <input id="name" th:field="${employee.name}" class="input" type="text"
+                       placeholder=" "/>
+                <div class="cut"></div>
+                <label for="name" class="placeholder">Name</label>
+            </div>
+
+            <div class="input-container ic1">
+                <input id="surname" th:field="${employee.surname}" class="input"
+                       type="text"
+                       placeholder=" "/>
+                <div class="cut"></div>
+                <label for="surname" class="placeholder">Surname</label>
+            </div>
+
+            <div class="input-container ic2">
+                <input id="email" th:field="${employee.email}" class="input"
+                       type="text"
+                       placeholder=" "/>
+                <div class="cut"></div>
+                <label for="email" class="placeholder">Email</label>
+            </div>
+
+            <div class="input-container ic2">
+                <input id="phone_number" th:field="${employee.phone_number}"
+                       class="input"
+                       type="text" placeholder=" "/>
+                <div class="cut"></div>
+                <label for="phone_number" class="placeholder">Phone Number</label>
+            </div>
+            <div class="text-center" style="position: relative; bottom: -3%">
+                <button type="submit" class="button-success">Edit</button>
+                <button type="reset" class="button-delete">Reset</button>
             </div>
         </div>
     </div>
-</div>
-</div>
+    <!--</form>-->
+
+    <!--<form th:action="@{'/companies/'+${companyId}+'/employee/post'}" th:object="${employee}"-->
+    <!--                          method="post"-->
+    <!--                          enctype="multipart/form-data">-->
+    <!--                        <fieldset>-->
+    <!--                            <div class="font-weight-normal mb-3">-->
+    <!--                                <span class="text-danger">*</span> Required fields-->
+    <!--                            </div>-->
+    <!--                            <div class="row">-->
+    <!--                                <div class="col-md-6">-->
+    <!--                                    <div class="input-group input-group-static mb-3">-->
+    <!--                                        <div class="form-group">-->
+    <!--                                            <label>Name <span class="text-danger">*</span></label>-->
+    <!--                                            <input type="text" th:field="${employee.name}"-->
+    <!--                                                   class="form-control input-lg"-->
+    <!--                                                   title="Name" required/>-->
+    <!--                                        </div>-->
+    <!--                                    </div>-->
+    <!--                                </div>-->
+    <!--                                <div class="col-md-6">-->
+    <!--                                    <div class="input-group input-group-static mb-3">-->
+    <!--                                        <label>Surname <span class="text-danger">*</span></label>-->
+    <!--                                        <input type="text" th:field="${employee.surname}"-->
+    <!--                                               class="form-control input-lg"-->
+    <!--                                               title="Surname" required/>-->
+    <!--                                    </div>-->
+    <!--                                </div>-->
+    <!--                                <div class="row">-->
+    <!--                                    <div class="col-md-12">-->
+    <!--                                        <div class="input-group input-group-static mb-3">-->
+    <!--                                            <label>Email <span class="text-danger">*</span></label>-->
+    <!--                                            <input type="email" th:field="${employee.email}"-->
+    <!--                                                   class="form-control input-lg"-->
+    <!--                                                   title="Email"/>-->
+    <!--                                        </div>-->
+    <!--                                    </div>-->
+    <!--                                </div>-->
+    <!--                                <div class="row">-->
+    <!--                                    <div class="col-md-12">-->
+    <!--                                        <div class="input-group input-group-static mb-3">-->
+    <!--                                            <label>Phone Number <span class="text-danger">*</span></label>-->
+    <!--                                            <input type="text" th:field="${employee.phone_number}"-->
+    <!--                                                   class="form-control input-lg"-->
+    <!--                                                   title="Phone Number"/>-->
+    <!--                                        </div>-->
+    <!--                                    </div>-->
+    <!--                                </div>-->
+
+    <!--                                <div class="text-center">-->
+    <!--                                    <button type="submit" class="btn bg-gradient-success w-100 my-4 mb-2">Save-->
+    <!--                                    </button>-->
+    <!--                                    <button type="reset" class="btn bg-gradient-info w-100 my-4 mb-2">Reset</button>-->
+    <!--                                </div>-->
+    <!--                            </div>-->
+    <!--                        </fieldset>-->
+</form>
 </body>
 </html>
