--- a/src/main/resources/templates/company.html
+++ b/src/main/resources/templates/company.html
@@ -10,7 +10,7 @@
     <script src="https://kit.fontawesome.com/42d5adcbca.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Round" rel="stylesheet">
     <link href="/css/button.css" rel="stylesheet">
-    <link href="/css/header2.scss" rel="stylesheet">
+    <link href="/css/header.scss" rel="stylesheet">
     <link href="/css/cards.css" rel="stylesheet">
     <title>Company</title>
 </head>
@@ -18,7 +18,7 @@
 <div th:replace="fragments/header :: header"></div>
 <div class="container" th:if="${!company.isEmpty()}" style="position:relative; top: 0; width: 400px">
     <div class="card" style="width: 600px; height: 800px">
-        <img src="/static/images/logo1_google.jpg" alt="image"
+        <img src="/images/logo1_google.jpg" alt="image"
              style="width: 200px; height: 200px">
 
         <div class="card__body">
