--- a/src/main/resources/templates/companies.html
+++ b/src/main/resources/templates/companies.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="/css/cards.css">
+    <link rel="stylesheet" href="/css/pagination.css">
     <title>
         All Companies
     </title>
@@ -29,4 +30,11 @@
         </div>
     </div>
 </div>
+
+<div class="pagination">
+    <a th:each="pageNumber : ${numberOfPages}" th:href="'/companies/?size=10&page='+${pageNumber}"
+       th:with="display=${pageNumber}+1" th:text="${display}"
+       th:class="${pageNumber==currentPage} ? active"></a>
+</div>
+
 </body>
