--- a/src/main/resources/templates/fragments/header_login.html
+++ b/src/main/resources/templates/fragments/header_login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" type="text/css"
-          href="/css/header2.scss">
+          href="/css/header.scss">
     <link rel="stylesheet" type="text/css"
           th:href="@{/webjars/font-awesome/5.0.10/web-fonts-with-css/css/fontawesome-all.min.css}"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
