--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <title>Login</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="/css/login2.css"/>
-    <link rel="stylesheet" href="/css/header2.scss">
+    <link rel="stylesheet" href="/css/login.css"/>
+    <link rel="stylesheet" href="/css/header.scss">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <link rel="stylesheet" type="text/css"
           href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900|Roboto+Slab:400,700"/>
