--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -3,41 +3,31 @@
 <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="/static/css/login.css"/>
+    <link rel="stylesheet" href="/css/cards.css">
     <title>
-        Company Employee CRM Log in Form
+        All Companies
     </title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
-    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900|Roboto+Slab:400,700"/>
-    <link href="css/nucleo-icons.css" rel="stylesheet"/>
-    <link href="css/nucleo-svg.css" rel="stylesheet"/>
-    <link ref="stylesheet" href="/css/cards.css">
-    <script src="https://kit.fontawesome.com/42d5adcbca.js" crossorigin="anonymous"></script>
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Round" rel="stylesheet">
-    <link id="pagestyle" href="css/material-kit.css?v=3.0.2" rel="stylesheet"/>
 </head>
-<body>
+
 <div th:replace="fragments/header :: header"></div>
-<div class="container">
-    <div class="row">
-        <div class="col card-deck ml-5 my-3" th:if="${!companies.isEmpty()}">
-            <div class="card" th:each="company : ${companies}">
-                <div class="card-body">
-                    <a th:href="@{'/companies/'+ ${company.getId()} + '/'}">
-                        <img src="/images/logo_google.png" >
-                    </a>
-                    <h4 class="card-text" th:text="${company.getName() }"></h4>
-                    <p class="card-text" th:text="${company.getEmail()}"></p>
-                    <p class="card-text" th:text="${company.getWebsite()}"></p>
-                   <div>
-                       <a class="active" th:href="@{'/companies/'+ ${company.getId()} + '/employees/'}" th:text="Employees" style="color: darkblue"></a>
-                   </div>
+
+<body th:if="${!companies.isEmpty()}">
+<div class="row">
+    <div class="container" th:each="company :${companies}" style="gap: 15px">
+        <div class="column">
+            <div class="card">
+                <div class="card__body">
+                    <div class="card-text">
+                        <h3>
+                            <a class="link" th:href="@{'/companies/'+ ${company.getId()}}"
+                               th:text="${company.getName()}" style="color: black"></a>
+                        </h3>
+                    </div>
+                    <p class="card-text" th:text="${'Email: '+company.getEmail()}"></p>
+                    <p class="card-text" th:text="${'Website: '+company.getWebsite()}"></p>
                 </div>
             </div>
         </div>
     </div>
 </div>
 </body>
-<div th:replace="fragments/footer :: footer">
-</div>
-</html>
