--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,70 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8"/>
+
+    <meta charset="UTF-8">
+    <title>Login</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="/static/css/login.css"/>
-    <title>
-        Company Employee CRM Log in Form
-    </title>
-    <!--     Bootstrap icons     -->
+    <link rel="stylesheet" href="/css/login.css"/>
+    <link rel="stylesheet" href="/css/header.scss">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
-    <!--     Fonts and icons     -->
     <link rel="stylesheet" type="text/css"
           href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900|Roboto+Slab:400,700"/>
-    <!-- Nucleo Icons -->
-    <link href="css/nucleo-icons.css" rel="stylesheet"/>
-    <link href="css/nucleo-svg.css" rel="stylesheet"/>
-    <!-- Font Awesome Icons -->
+    <link rel="stylesheet" href="/css/cards.css">
     <script src="https://kit.fontawesome.com/42d5adcbca.js" crossorigin="anonymous"></script>
-    <!-- Material Icons -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Round" rel="stylesheet">
-    <!-- CSS Files -->
-    <link id="pagestyle" href="css/material-kit.css?v=3.0.2" rel="stylesheet"/>
 </head>
-<body style="background-color: white">
+<body>
 <div th:replace="fragments/header_login :: header"></div>
-<div class="container my-auto" style="position:relative; left:35px; top:80px;">
-    <div class="row">
-        <div class="col-lg-4 col-md-8 col-12 mx-auto">
-            <div class="card z-index-0 fadeIn3 fadeInBottom">
-                <div class="card-header p-0 position-relative mt-n4 mx-3 z-index-2" style="background-color: #0d376f">
-                    <div class="bg-gradient-info shadow-primary border-radius-lg py-3 pe-1">
-                        <h4 class="text-white font-weight-bolder text-center mt-2 mb-0">Login</h4>
-                    </div>
-                </div>
-                <div class="card-body">
-                    <form th:action="@{/login}" method="post" role="form" class="text-start">
-                        <div th:if="${param.error}" class="text-danger font-weight-bold">
-                            Invalid Email/Password
-                        </div>
-                        <div class="input-group input-group-outline my-3">
-                            <label class="form-label">Email</label>
-                            <input type="text" id="login" name="email" class="form-control">
-                        </div>
-                        <div class="input-group input-group-outline mb-3">
-                            <label class="form-label">Password</label>
-                            <input type="password" id="entry" name="entry" class="form-control">
-                        </div>
-                        <div class="form-check form-switch d-flex align-items-center mb-3">
-                            <input class="form-check-input" type="checkbox" id="rememberMe">
-                            <label class="form-check-label mb-0 ms-2" for="rememberMe">Remember me</label>
-                        </div>
-                        <div class="text-center">
-                            <button type="submit" class="btn bg-gradient-success w-100 my-4 mb-2">Login</button>
-                        </div>
-                        <p class="mt-4 text-sm text-center">
-                            Forgot password? <a href="register">Recover</a><br>
-                        </p>
-                        <p class="mt-4 text-sm text-center">
-                            Not an admin? <a href="home.html">Home page</a><br>
-                        </p>
-                    </form>
-                </div>
-            </div>
-        </div>
+<div id="login-form-wrap">
+    <h2>Login</h2>
+    <form id="login-form" th:action="@{/login}" method="post" role="form">
+        <p>
+            <input type="text" id="login" name="login" placeholder="Login" required><i
+                class="validation"><span></span><span></span></i>
+        </p>
+        <p>
+            <input type="password" id="entry" name="entry" placeholder=" Password" required><i
+                class="validation"><span></span><span></span></i>
+        </p>
+        <p>
+            <input class="btn-success" type="submit" value="Login">
+        </p>
+    </form>
+    <div id="create-account-wrap">
+        <p>Not an admin? <a href="/home">Home</a>
+        <p>
     </div>
 </div>
-<!--<div th:replace="fragments/footer :: footer"></div>-->
 </body>
 </html>
