--- a/src/main/resources/templates/company.html
+++ b/src/main/resources/templates/company.html
@@ -33,20 +33,18 @@
             </div>
         </div>
         <div class="row">
-
-            <a class="button-success"
+            <a class="button-success" sec:authorize="hasRole('ROLE_ADMIN')"
                th:text="'Add Employee'"
                th:href="@{'/companies/'+${company.get().getId()}+'/employee/add'}">
             </a>
 
-            <a class="button-delete"
+            <a class="button-delete" sec:authorize="hasRole('ROLE_ADMIN')"
                th:href="@{'/companies/'+${company.get().getId()}+'/delete'}">Delete
             </a>
 
-            <a class="button-edit"
+            <a class="button-edit" sec:authorize="hasRole('ROLE_ADMIN')"
                th:href="@{'/companies/'+${company.get().getId()}+'/edit'}">Edit
             </a>
-
         </div>
     </div>
 </div>
